--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,8 +21,5 @@ jobs:
       - name: Test app
         run: npm run test
       - name: Trigger deployment
-        run: curl --request GET \
-          --url 'https://api.render.com/v1/services?limit=20' \
-          --header 'Accept: application/json' \
-          --header 'Authorization: Bearer <%= ENV['RENDER_API_SECRET'] %>'
-       
+        run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
+
