--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
-    steps: "bumping the patch number"
+    steps:
       - name: "Bump version and push tag"
         if: ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.67.0
