--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,11 +28,13 @@ jobs:
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
 
   tag_release:
-    runs-on: ubuntu-20.04
     needs: [simple_deployment_pipeline]
     steps:
-      - uses: anothrNick/github-tag-action@1.67.0
+        uses: anothrNick/github-tag-action@1.67.0
       - name: "Bump version and push tag"
         if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
