--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Trigger deployment
         if: ${{ github.event_name == 'push' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
-
   tag_release:
     needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
     steps:
         uses: anothrNick/github-tag-action@1.67.0
-      - name: "Bump version and push tag"
+      - name: Bump version and push tag
         if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
