--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,11 @@ on:
   push:
     branches:
       - main
+      - master
   pull_request:
-    branches: [main]
+    branches: 
+      - main
+      - master
     types: [opened, synchronize]
 
 jobs:
@@ -37,7 +40,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.67.0
+        if: github.event_name == 'push' 
+        uses: anothrNick/github-tag-action@1.64.0
         env:
-          GITHUB_TOKENN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: false
 
