--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Test app
         run: npm run test
       - name: Trigger deployment
-        if: github.event_name == 'push'
+        if: ${github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
 
       - name: Bump version and push tag
