--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Test app
         run: npm run test
       - name: Trigger deployment
-
-        if: ${{github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') }}
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        if: ${{github.event_name == 'push' && !contains(COMMIT_MESSAGES, '#skip') }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
 
       - name: Bump version and push tag
