--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,4 +40,5 @@ jobs:
       - name: commit messages
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        if: ${{ !contains('Hello world', 'llo')  }}
         run: echo "$COMMIT_MESSAGES"
