if #skip in commit message dont bump version_14

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,5 +40,5 @@ jobs:
       - name: commit messages
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ !contains('Hello world', 'llo')  }}
+        if: ${{ !contains('Hello world', 'siuu')  }}
         run: echo "$COMMIT_MESSAGES"
