--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           WITH_V: false
+  echoing-dir-n-data:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: echo shi..
+        run: |
+          echo ls, $(date)
