now the depployment shouldnt start #skip  6

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,9 +33,7 @@ jobs:
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
 
       - name: Bump version and push tag
-        env:
-          COMMIT_MESSAGES_2: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ !contains(env.COMMIT_MESSAGES_2, '#skip') && github.event_name == 'push'}}
+        if: ${{ !contains(env.COMMIT_MESSAGES, '#skip') && github.event_name == 'push'}}
         uses: anothrNick/github-tag-action@1.64.0 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
