--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,7 +39,24 @@ jobs:
         if: ${{ !contains(env.COMMIT_MESSAGES_2, '#skip') && github.event_name == 'push'}}
         uses: anothrNick/github-tag-action@1.64.0 
 
-      - name: Send Discord notification ☺!
-        uses: rjstone/discord-webhook-notify@v1
-        with:
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Test Success
+          uses: rjstone/discord-webhook-notify@v1
+          if: success()
+          with:
+              severity: info
+              details: Test Succeeded!
+              webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Test Failure
+          uses: rjstone/discord-webhook-notify@v1
+          if: failure()
+          with:
+              severity: error
+              details: Test Failed!
+              webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Test Cancelled
+          uses: rjstone/discord-webhook-notify@v1
+          if: cancelled()
+          with:
+              severity: warn
+              details: Test Cancelled!
+              webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
