--- a/.github/workflows/healthCheck.yml
+++ b/.github/workflows/healthCheck.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   healthCheck:
+    runs-on: ubuntu-latest
     steps:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v4
